# PhototwixPi

./: README.md
src/: CMakeLists.txt  Makefile.old  config.xml  control.cpp  control.h  graphic_util.cpp  graphic_util.h  main.cpp  main_phototwix.cpp  main_phototwix.h  screen.cpp  screen.h  screen_camera.cpp  screen_camera.h  template.cpp  template.h  util.cpp  util.h
src/cmake/Modules/: FindRapidXML.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake
src/design/: README  design.xml
src/lib/camera/: camera.cpp
src/shaders/: sepiashader.glsl
src/templates/: README
src/templates/template_config/: template_config1.xml
